--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -7,3 +7,4 @@
       raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
       become: true
       changed_when: false
+      ignore_errors: true
