--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,43 +1,29 @@
 ---
 
 
-- name: Install Splunk Enterprise RPM
-  yum:
-    name: "{{ __splunk_rpm_url | default('https://www.splunk.com/bin/splunk/DownloadActivityServlet?architecture=x86_64&platform=linux&version=7.2.6&product=splunk&filename=splunk-7.2.6-c0bf0f679ce9-linux-2.6-x86_64.rpm&wget=true') }}"
-    state: present
-  become: true
+- name: Install Splunk
+  include_tasks: install_splunk.yml
 
 
-- name: Configure admin user credentials
-  template:
-    src: splunk-user-seed.conf
-    dest: /opt/splunkforwarder/etc/system/local/user-seed.conf
-    owner: splunk
-    group: splunk
-    mode: 0700
-  become: true
+- name: Bypass first-time UI login
+  include_tasks: bypass_first_ui_login.yml
 
 
-- name: Create the Splunk forwarder service
-  command: "/opt/splunkforwarder/bin/splunk enable boot-start --accept-license --answer-yes -user {{ __splunkforwarder_os_user | default('splunk') }}"
-  become: true
+- name: Set Splunk secret
+  include_tasks: set_splunk_secret.yml
 
 
-- name: Configure forwarder as deployment client
-  template:
-    src: splunk-deploymentclient.conf
-    dest: /opt/splunkforwarder/etc/system/local/deploymentlcient.conf
-    owner: splunk
-    group: splunk
-    mode: 0755
-  become: true
-  when:
-    - __splunk_deployment_server is defined
+- name: Configure adminstrative user
+  include_tasks: configure_administrative_user.yml
 
 
-- name: Start and enable the Splunk forwarder service
-  service:
-    name: SplunkForwarder
-    state: started
-    enabled: yes
-  become: true
+- name: Configure Splunk OS user
+  include_tasks: configure_splunk_os_user.yml
+
+
+- name: Configure Splunk service
+  include_tasks: configure_splunk_service.yml
+
+
+- name: Start Splunk
+  include_tasks: start_splunk.yml
