Testing new scenario, no regex escape on secret

--- a/tasks/set_splunk_secret.yml
+++ b/tasks/set_splunk_secret.yml
@@ -2,13 +2,14 @@
 # file: .../tasks/set_splunk_secret.yml
 
 
+# content: "{{ __splunk_secret | string | regex_escape }}"
 - name: Set Splunk secret
   copy:
     dest: "{{ __splunk_home | default('/opt/splunk') }}/etc/auth/splunk.secret"
     owner: "{{ __splunk_user | default('splunk') }}"
     group: "{{ __splunk_group | default('splunk') }}"
     mode: 0600
-    content: "{{ __splunk_secret | string | regex_escape }}"
+    content: "{{ __splunk_secret }}"
   become: true
   when:
     - __splunk_secret is defined
