--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,14 @@
 ---
 
 
+- name: Disable firewalld
+  service:
+    name: firewalld
+    state: stopped
+    enabled: no
+  become: true
+
+
 - name: Install Splunk
   include_tasks: install_splunk.yml
 
